--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "govuk-frontend": "^2.11.0",
     "chart.js": "^2.8.0",
     "react-chartjs-2": "^2.7.6",
-    "react-js-pagination": "^3.0.2"
-  },
-  "devDependencies": {
+    "react-js-pagination": "^3.0.2",
     "react-router-dom": "^5.0.0"
   },
   "scripts": {
